[gd_scene load_steps=9 format=3 uid="uid://b357pus0d553w"]

[ext_resource type="Script" path="res://godot/scr/uiMenuStartExploration.gd" id="2_4ujau"]
[ext_resource type="Theme" uid="uid://dput70sdrayl" path="res://godot/tres/uiGlobalTheme.tres" id="3_tctqs"]
[ext_resource type="AudioStream" uid="uid://m4ny8ff47g0h" path="res://external/aud/fx/select_008 .ogg" id="3_trr1o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkp5y"]
bg_color = Color(1, 1, 1, 0.0784314)
border_color = Color(1, 1, 1, 0.196078)
corner_detail = 1

[sub_resource type="Animation" id="Animation_3gxx0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("uiMenuStartPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.0784314)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l66v6"]
resource_name = "uiMenuStartExplorationHovered"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("uiMenuStartPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("uiMenuStartPanel:theme_override_styles/panel:border_width_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [0, 512]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("uiMenuStartPanel:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3l6lh"]
resource_name = "uiMenuStartHighlight"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("uiMenuStartPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jaeji"]
_data = {
"RESET": SubResource("Animation_3gxx0"),
"uiMenuStartExplorationHovered": SubResource("Animation_l66v6"),
"uiMenuStartHighlight": SubResource("Animation_3l6lh")
}

[node name="uiMenuStartExploration" type="Button"]
anchors_preset = -1
anchor_right = 0.179
anchor_bottom = 0.044
offset_right = 0.319977
offset_bottom = 0.479996
theme = ExtResource("3_tctqs")
theme_override_colors/font_color = Color(1, 1, 1, 0.784314)
theme_override_font_sizes/font_size = 20
text = "INITIATE SECTOR EXPLORATION
"
flat = true
script = ExtResource("2_4ujau")

[node name="uiMenuStartPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.0784314)
layout_mode = 1
offset_right = 344.0
offset_bottom = 48.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fkp5y")

[node name="uiMenuStartAnimation" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_jaeji")
}
autoplay = "uiMenuStartHighlight"

[node name="uiMenuStartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_trr1o")
bus = &"SFX Main"

[connection signal="mouse_entered" from="." to="." method="_whenMouseEnteredButton"]
[connection signal="mouse_exited" from="." to="." method="_whenMouseExitedButton"]
[connection signal="pressed" from="." to="." method="_whenMousePressed"]
